--- a/prepros-6.config
+++ b/prepros-6.config
@@ -57,7 +57,9 @@
         "scss/section/best.scss",
         "scss/section/team.scss",
         "scss/section/menu.scss",
-        "scss/section/forms.scss"
+        "scss/section/forms.scss",
+        "scss/section/fix.scss",
+        "scss/section/comments.scss"
       ]
     }
   ],
