adaptive top section

--- a/prepros-6.config
+++ b/prepros-6.config
@@ -30,9 +30,7 @@
   ],
   "fileTree": {
     "expandedDirs": [
-      "css",
-      "scss",
-      "scss/section"
+      "css"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -50,6 +48,7 @@
     {
       "path": "scss/main.scss",
       "imports": [
+        "scss/config/media.scss",
         "scss/config/base.scss",
         "scss/config/fonts.scss",
         "scss/config/mixins.scss",
@@ -59,7 +58,9 @@
         "scss/section/menu.scss",
         "scss/section/forms.scss",
         "scss/section/fix.scss",
-        "scss/section/comments.scss"
+        "scss/section/comments.scss",
+        "scss/section/working.scss",
+        "scss/section/footer.scss"
       ]
     }
   ],
