--- a/prepros-6.config
+++ b/prepros-6.config
@@ -30,7 +30,8 @@
   ],
   "fileTree": {
     "expandedDirs": [
-      "css"
+      "css",
+      "scss"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -65,7 +66,7 @@
     }
   ],
   "projectView": {
-    "selectedView": "log"
+    "selectedView": "file-tree"
   },
   "fileWatcher": {
     "enabled": true,
